# guiosoft-infra

./: .pre-commit-config.yaml  AGENTS.md  MEMORY.md  README.md
BASE_SETUP/: ARTICLE.md  ARTICLE_EN.md  README.md
BASE_SETUP/ansible-homelab/: .gitignore  README.md  ansible.cfg
BASE_SETUP/ansible-homelab/inventory/production/: hosts.yml
BASE_SETUP/ansible-homelab/inventory/staging/: hosts.yml
BASE_SETUP/ansible-homelab/playbooks/: site.yml
BASE_SETUP/ansible-homelab/roles/cloudflare-tunnel/: README.md
BASE_SETUP/ansible-homelab/roles/cockpit/: README.md
BASE_SETUP/ansible-homelab/roles/common/: README.md
BASE_SETUP/ansible-homelab/roles/docker/: README.md
BASE_SETUP/ansible-homelab/roles/kernel/: README.md
BASE_SETUP/ansible-homelab/roles/mail-server/: README.md
BASE_SETUP/ansible-homelab/scripts/: setup-homelab.sh
SCRIPTS/furlanserver-backup/: .pre-commit-config.yaml  pyproject.toml
SCRIPTS/furlanserver-backup/src/: byte_str.py  config.py  dates.py  lockfile.py  other_files.py  other_folder.py  pre_run_script.py  shell.py  ssh.py  wait_uptime.py
SCRIPTS/furlanserver-backup/tests/: test_lockfile.py  test_otherfile.py  test_pre_run_script.py  test_shell.py  test_wait_until_uptime.py
SERVICES/: LAB.md
docs/: VIRTUALBOX.md
furlan-server/: README.md  Vagrantfile  home-assistant.config  playbook.yml
furlanserver-backup/: README.md  backup_home.py
furlanserver-backup/src/: logger.py  sync.py
furlanserver-backup/tests/: test_byte_str.py
guiosoft-info-ansible/: ARTICLE_EN.md  README.md
ssh_backup/: README.md  ssh_backup.sh
(+34 files in other folders)
